--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+img {
+  width: 50vw;
+}
+
+@media only screen and (min-width: 1024px){
+  img {
+    width: 488px;
+  }
+}
